--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,9 +3,9 @@
     "short_name": "hubank",
     "start_url": ".",
     "display": "minimal-ui",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#673AB7",
+    "theme_color": "#673AB7",
+    "description": "HuBank",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
